--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 *,
 *:before,
 *:after {
@@ -14,7 +13,7 @@
   padding-top: 1rem;
 }
 
-span {
+.panel {
   display: inline-block;
   width: 4rem;
   height: 6rem;
@@ -35,7 +34,6 @@ span {
   text-align: center;
 }
 
-
 #score-box,
 #life-box {
   /* width: 20rem; */
@@ -52,14 +50,12 @@ span {
 #score,
 #life-text,
 #life {
-  /* border: 2px solid black; */
   border-radius: 5px;
   background-color: bisque;
   display: inline-block;
   font-size: 3rem;
   line-height: 3rem;
-  padding: .5rem;
-  
+  padding: .5rem;  
 }
 
 #score-text,
@@ -74,6 +70,32 @@ span {
   text-align: right;
 }
 
-/* #end {
-  display: none;
-} */
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.1); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+  text-align: center;
+}
+
+.button:hover,
+.button:focus {
+    cursor: pointer;
+}
