decorate modal box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,3 +99,17 @@
 .button:focus {
     cursor: pointer;
 }
+
+#modal-text {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+#modal-button {
+  background-color: cornflowerblue;
+  padding: 1rem 4rem;
+  /* border: 1px solid black; */
+  border-radius: 2px;
+  display: inline-block;
+  margin-bottom: 1rem;
+}
