--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,10 @@
   width: 60%;
   float: left;
   text-align: center;
-  background-color: red;
+  background-color: darkolivegreen;
   border-radius: 5px;
+  border: 5px solid black;
+  padding: 3px;
 }
 #main::after {
   content: "";
